--- a/Index.html
+++ b/Index.html
@@ -89,7 +89,7 @@
 </head>
 <body>
   <div class="navbar">
-    <a href="#" onclick="showSection('menu1')">Menu1</a>
+    <a href="#" onclick="showSection('menu1')">Menu</a>
     <a href="#" onclick="showSection('menu2')">Menu2</a>
   </div>
 
